[Enhancement] Fix SonarCloud code smells for PR #77471
Signed-off-by: James Lamb <admin@oranged.to>